# somatic-topology-engine

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
crates/ste-cli/: Cargo.toml
crates/ste-cli/examples/: acquisition_benchmark.rs  commissioning_benchmark.rs  device_simulator_benchmark.rs  model_lifecycle_benchmark.rs  observation_benchmark.rs  production_readiness_status.rs  respiration_benchmark.rs  state_projection_benchmark.rs  validation_report.rs  vector_memory_benchmark.rs
crates/ste-cli/src/: lib.rs  main.rs
crates/ste-cli/tests/: device_simulator_commands.rs  diagnostics_commands.rs  memory_commands.rs  model_lifecycle_commands.rs  model_package_fixtures.rs  observation_replay.rs  operator_commands.rs  replay_commands.rs  respiration_commands.rs  state_projection_commands.rs  storage_commands.rs  validation_commands.rs
crates/ste-commercial-readiness/: Cargo.toml
crates/ste-commercial-readiness/src/: lib.rs
crates/ste-commercial-readiness/tests/: readiness.rs
crates/ste-commissioning/: Cargo.toml
crates/ste-commissioning/src/: lib.rs
crates/ste-commissioning/tests/: qualification.rs
crates/ste-consent-governance/: Cargo.toml
crates/ste-consent-governance/src/: application.rs  domain.rs  infrastructure.rs  lib.rs
crates/ste-consent-governance/tests/: authorization_properties.rs  policy_and_repositories.rs  public_boundary.rs
crates/ste-consent-governance/tests/fixtures/: README.md
crates/ste-contracts/: Cargo.toml  README.md
crates/ste-contracts/examples/: generate_schemas.rs
crates/ste-contracts/src/: lib.rs
crates/ste-contracts/tests/: contracts.rs
crates/ste-experiment-validation/: Cargo.toml
crates/ste-experiment-validation/src/: application.rs  domain.rs  infrastructure.rs  lib.rs  metrics.rs  reference.rs
crates/ste-experiment-validation/tests/: metrics_sync.rs  public_boundary.rs  repository_reports.rs  study_dataset.rs
crates/ste-experiment-validation/tests/fixtures/: simulated-reference-rig.json
crates/ste-kernel/: Cargo.toml
crates/ste-kernel/src/: event.rs  id.rs  lib.rs  probability.rs  provenance.rs  time.rs  units.rs
crates/ste-kernel/tests/: primitives.rs
crates/ste-model-runtime/: Cargo.toml
crates/ste-model-runtime/src/: capability.rs  lib.rs  package.rs  registry.rs  uncertainty.rs
crates/ste-model-runtime/tests/: package_lifecycle.rs  uncertainty_capability.rs
crates/ste-model-runtime/tests/fixtures/: adversarial-calibration.json  corrupt-package.json  incompatible-package.json
crates/ste-observability/: Cargo.toml
crates/ste-observability/src/: diagnostics.rs  lib.rs  metrics.rs  support_bundle.rs  tracing.rs
crates/ste-observability/tests/: bounded_local.rs
crates/ste-personalization-memory/: Cargo.toml
crates/ste-personalization-memory/src/: adaptation.rs  application.rs  domain.rs  infrastructure.rs  lib.rs  retrieval.rs
crates/ste-personalization-memory/tests/: pattern_profile.rs  public_boundary.rs  reference_vector_journal.rs  retrieval_adaptation.rs
crates/ste-physiology-estimation/: Cargo.toml
crates/ste-physiology-estimation/src/: application.rs  domain.rs  estimator.rs  evaluation.rs  infrastructure.rs  lib.rs
crates/ste-physiology-estimation/tests/: assessment_policy.rs  public_boundary.rs  repository_registry.rs  respiration_estimator.rs
crates/ste-physiology-estimation/tests/fixtures/: respiration-known-answer.json
crates/ste-query-plane/: Cargo.toml
crates/ste-query-plane/src/: lib.rs
crates/ste-query-plane/tests/: query_plane.rs
crates/ste-radio-acquisition/: Cargo.toml
crates/ste-radio-acquisition/src/: application.rs  domain.rs  infrastructure.rs  lib.rs  live_adapter.rs  replay.rs
crates/ste-radio-acquisition/tests/: domain_and_contracts.rs  live_adapter.rs  public_boundary.rs  replay_and_adapters.rs
crates/ste-release-hardening/: Cargo.toml
crates/ste-release-hardening/src/: lib.rs  release_evidence.rs
crates/ste-release-hardening/tests/: hardening.rs  release_evidence.rs
crates/ste-runtime/: Cargo.toml
crates/ste-runtime/examples/: runtime_benchmark.rs
crates/ste-runtime/src/: config.rs  fault.rs  governance_gate.rs  health.rs  ipc.rs  lib.rs  sidecar.rs  slo.rs  supervisor.rs  synthetic.rs  verification.rs
crates/ste-runtime/tests/: adversarial_verification.rs  composition.rs  configuration.rs  governance_gate.rs  ipc_security.rs  sidecar_containment.rs  slo_faults.rs  supervision.rs  synthetic_pipeline.rs
crates/ste-sidecar-policy/: Cargo.toml
crates/ste-sidecar-policy/src/: lib.rs
crates/ste-sidecar-policy/tests/: policy.rs
crates/ste-signal-observation/: Cargo.toml
crates/ste-signal-observation/src/: application.rs  domain.rs  dsp.rs  infrastructure.rs  lib.rs
crates/ste-signal-observation/tests/: domain_artifacts.rs  dsp_golden.rs  public_boundary.rs  replay_repository.rs
crates/ste-state-inference/: Cargo.toml
crates/ste-state-inference/src/: application.rs  domain.rs  infrastructure.rs  lib.rs  temporal.rs  validation.rs
crates/ste-state-inference/tests/: public_boundary.rs  repository_projection.rs  state_policy.rs  temporal_application.rs
crates/ste-storage/: Cargo.toml
crates/ste-storage/src/: crypto.rs  journal.rs  lib.rs  lifecycle.rs  projection.rs
crates/ste-storage/tests/: encryption_lifecycle.rs  journal_recovery.rs
crates/ste-ui-gateway/: Cargo.toml
crates/ste-ui-gateway/src/: lib.rs
crates/ste-ui-gateway/tests/: adversarial.rs  query_contract.rs
crates/ste-web-gateway/: Cargo.toml  README.md
crates/ste-web-gateway/benches/: README.md
crates/ste-web-gateway/docs/: api-support-matrix.md
crates/ste-web-gateway/src/: composition.rs  lib.rs  main.rs
crates/ste-web-gateway/tests/: http_security.rs  production_composition.rs
crates/ste-workflows/: Cargo.toml
crates/ste-workflows/src/: catalog.rs  engine.rs  journal.rs  lib.rs  model.rs  ports.rs
crates/ste-workflows/tests/: workflows.rs
docs/: adr-index.md  (+4 more)
fuzz/: Cargo.toml
fuzz/corpus/contract_envelope/: valid-envelope.json
fuzz/fuzz_targets/: contract_envelope.rs  dsp_graph.rs  radio_replay.rs
(+227 files in other folders)
