[package]
name = "ste-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Local operator CLI for the Somatic Topology Engine"

[[bin]]
name = "ste"
path = "src/main.rs"

[dependencies]
ste-runtime = { path = "../ste-runtime" }
ste-consent-governance.workspace = true
ste-storage.workspace = true
ste-radio-acquisition.workspace = true
ste-signal-observation.workspace = true
ste-observability.workspace = true
serde_json.workspace = true

[lints]
workspace = true
