[package]
name = "ste-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Local operator CLI for the Somatic Topology Engine"

[[bin]]
name = "ste"
path = "src/main.rs"

[dependencies]
ste-runtime = { path = "../ste-runtime" }
ste-consent-governance.workspace = true
ste-storage.workspace = true
ste-radio-acquisition.workspace = true
ste-signal-observation.workspace = true
ste-observability.workspace = true
ste-experiment-validation.workspace = true
ste-physiology-estimation.workspace = true
ste-model-runtime.workspace = true
ste-state-inference.workspace = true
ste-personalization-memory.workspace = true
ste-device-interaction.workspace = true
ste-commissioning.workspace = true
serde_json.workspace = true
serde.workspace = true

[lints]
workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
