[package]
name = "ste-commercial-readiness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Signed exact-scope production readiness decisions"

[dependencies]
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
