[package]
name = "ste-commissioning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Offline commissioning and signed site qualification"

[dependencies]
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
