[package]
name = "ste-consent-governance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Consent and governance bounded context"

[dependencies]
serde.workspace = true
serde_json.workspace = true
ste-kernel.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
