[package]
name = "ste-contracts"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Versioned integration DTOs for the Somatic Topology Engine"

[dependencies]
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }

[[example]]
name = "generate-schemas"
path = "examples/generate_schemas.rs"
