[package]
name = "ste-experiment-validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Experiment validation bounded context"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ste-kernel.workspace = true

[lints]
workspace = true
