[package]
name = "ste-kernel"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false
description = "Dependency-free domain primitives for the Somatic Topology Engine"

[dependencies]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "deny"
pedantic = "deny"
