[package]
name="ste-observability"
version.workspace=true
edition.workspace=true
rust-version.workspace=true
license.workspace=true
publish.workspace=true
description="Bounded local observability and redacted support bundles for STE"
[dependencies]
serde.workspace=true
serde_json.workspace=true
sha2.workspace=true
[lints]
workspace=true
