[package]
name = "ste-personalization-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Personalization memory bounded context"

[dependencies]
ste-kernel.workspace = true

[lints]
workspace = true
