[package]
name = "ste-personalization-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Personalization memory bounded context"

[dependencies]
serde.workspace = true
ste-kernel.workspace = true
chacha20poly1305.workspace = true
rand_core.workspace = true

[lints]
workspace = true
