[package]
name = "ste-physiology-estimation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Physiology estimation bounded context"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ste-experiment-validation.workspace = true
ste-kernel.workspace = true

[lints]
workspace = true
