[package]
name = "ste-radio-acquisition"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Radio acquisition bounded context"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ste-contracts.workspace = true
ste-kernel.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
