[package]
name = "ste-sidecar-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Fail-closed optional sidecar policy and supervision"

[dependencies]
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
