[package]
name = "ste-signal-observation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Signal observation bounded context"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ste-kernel.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
