[package]
name = "ste-state-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "State inference bounded context"

[dependencies]
serde.workspace = true
ste-model-runtime.workspace = true
ste-kernel.workspace = true

[lints]
workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
serde_json.workspace = true
