[package]
name = "ste-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Checksummed journal and deterministic projection core for STE"

[dependencies]
chacha20poly1305.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zeroize.workspace = true

[lints]
workspace = true
