[package]
name = "ste-ui-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Fail-closed browser presentation boundary for STE"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ste-query-plane.workspace = true

[lints]
workspace = true
