[package]
name = "ste-web-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Bounded loopback HTTP/SSE adapter for STE application services"

[dependencies]
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ste-ui-gateway.workspace = true
ste-query-plane.workspace = true
ste-workflows.workspace = true
tokio = { workspace = true, features = ["net", "signal"] }
tower = { version = "0.5", features = ["limit", "util"] }
tower-http = { version = "0.6", features = ["catch-panic", "limit", "timeout"] }

[dev-dependencies]
http-body-util = "0.1"

[lints]
workspace = true
