[package]
name = "ste-workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Durable, fail-closed orchestration of privileged STE operations"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
